--- a/IntroductionToPython/01-Introduction.ipynb
+++ b/IntroductionToPython/01-Introduction.ipynb
@@ -18,7 +18,7 @@
     "- analyzing financial data\n",
     "- making decisions (which covers another range from answer simple yes/no questions to driving a car).\n",
     "\n",
-    "Learning to program is not a passive activity.  You can not simply just read documentation and these notebooks.  It will take targeted practice and that practice takes times.  These notebooks will present fundamental concepts and then how those concepts are implemented in Python as well as how you can solve real problems with those concepts.  These notebooks contain a large number of sample code.  Not only should you run this code, you should also make changes to the code and see what happens.  Don't be afraid to make mistakes - try things!.  The computer doesn't care and won't make fun of you.  You should complete the exercises at the end of each notebook.  Yes, we have provided the answers.  However, you will really learn by attempting the exercises on your own. We have written these exercises to reinforce the concepts presented.\n",
+    "Learning to program is not a passive activity.  You cannot simply just read documentation and these notebooks.  Becoming an effective programmer takes targeted practice and that practice takes times.  These notebooks will present fundamental concepts and then how those concepts are implemented in Python as well as how you can solve real problems with those concepts. These notebooks contain a large amount of Python code. Not only should you run this code, but you should also make changes to the code and see what happens. Do not be afraid to make mistakes - try things! The computer does not care and will not make fun of you. You should complete the exercises at the end of each notebook. Yes, many of the answers are provided. However, you will really learn by attempting the exercises on your own. We have written these exercises to reinforce the concepts presented.\n",
     "\n",
     "The next notebook presents an approach to solve problems with programming.  The key principle with this approach is understand what occurs and then how we can translate that into a series of steps.  And most importantly, to plan how to implement that approach before you write any code. Once we have the steps (our approach), we can then write code.  As you perform this process, you should have a paper handy to take notes and record your thoughts.\n",
     "\n",
@@ -78,7 +78,7 @@
     "While you may be new to programming, hopefully you can see how the previous code block worked.\n",
     "<br>Note: If you need to see line numbers, refer to the previous notebook for instructions to enable them.\n",
     "\n",
-    "* lines 1 and 2 let the program use the `webbrowser` and `json` libraries.  The `webbrowser` library lets us open a new browser window with a given URL (line 16).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. We'll cover JSON in more detail as the course progresses. The `json` libraries provides code to parse the JSON data format.\n",
+    "* lines 1 and 2 let the program use the `webbrowser` and `json` libraries.  The `webbrowser` library allows the program to open a new browser window with a given URL (line 16).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. The course will cover JSON in more detail in later notebooks. The `json` libraries provides code to parse the JSON data format.\n",
     "* line 3 allows us to use the the `urlopen()` method from the `urllib.request` module. As you can see from these first three lines, one of Python's advantages is the large number of included standard libraries and available 3<sup>rd</sup> party open-source libraries.\n",
     "* line 5 prints a message to the console telling the user what the program will do\n",
     "* line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog no longer available on the Internet.\n",
@@ -93,7 +93,7 @@
     "* line 15 tells the user that we will be opening that URL in a new browser window.\n",
     "* line 16 then opens a browser window with that URL. NOTE: this will not work in Google Colaboratory.\n",
     "\n",
-    "Note: if you want to see the values of some of these intermediate values, you can edit the above source code and insert a line such as the following just after that variables is assigned (before line 12):\n",
+    "Note: if you want to see the values of some of these intermediate values, you can edit the above source code and insert a line such as the following just after that variable is assigned (before line 12):\n",
     "```\n",
     "print(contents)\n",
     "```"
@@ -161,8 +161,7 @@
    "id": "da6c4bfa",
    "metadata": {},
    "source": [
-    "\n",
-    "And, now, in the following cell, the program searches Google for the terms \"financial technology\". The program then converts that result into a built-in data structure called a list that holds a sequence of \"things/data\" in a particular order.\n",
+    "In the following cell, the program searches Google for the terms \"financial technology\". The program then converts that result into a built-in data structure called a list that holds a sequence of \"things/data\" in a particular order.\n",
     "\n",
     "As we call `search`, we pass 4 arguments:\n",
     "* query terms\n",
@@ -190,7 +189,7 @@
     "```\n",
     "URLError: <urlopen error [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: unable to get local issuer certificate (_ssl.c:997)>\n",
     "```\n",
-    "On MacOS, open a terminal window and execture the following commands (assumes Python 3.10 installed):\n",
+    "On MacOS, open a terminal window and execute the following commands (assumes Python 3.10 installed):\n",
     "```\n",
     "cd  /Applications/Python\\ 3.10\n",
     "./Install\\ Certificates.command\n",
@@ -220,7 +219,7 @@
    "id": "4cae1a28",
    "metadata": {},
    "source": [
-    "The next code blocks prints the number of entries in the list `search_result` followed by the entry in the first position.  For largely historical reasons tied to what was a performance optimization, most programming languages start to count things at 0 and then go to length-1 for the last item. [Zero Based Numbering](https://en.wikipedia.org/wiki/Zero-based_numbering).  \n",
+    "The next code block prints the number of entries in the list `search_result` followed by the entry in the first position.  For largely historical reasons tied to what was a performance optimization, most programming languages start to count things at 0 and then go to length-1 for the last item. [Zero Based Numbering](https://en.wikipedia.org/wiki/Zero-based_numbering).  \n",
     "\n",
     "Try running the following block with different values for `0`.  What happens if `[0]` is removed?"
    ]
@@ -243,7 +242,7 @@
    "source": [
     "This next code block takes that particular URL, opens a network connection to that URL, and then reads the results into the variable `mystr`.\n",
     "\n",
-    "Then the code uses the BeautifulSoup library to parse the HTML document that's returned. It then extracts all of the text content, placing the results in `text`."
+    "Then the code uses the BeautifulSoup library to parse the returned HTML document. The program then extracts all of the text content, placing the results in `text`."
    ]
   },
   {
@@ -294,7 +293,7 @@
     "\n",
     "One of the most well-studied problems in computer science is the [traveling salesperson problem](https://en.wikipedia.org/wiki/Travelling_salesman_problem).  Suppose a salesperson has to visit $n$  cities and return back to that starting point.  What is the shortest route that visits each city exactly once?\n",
     "\n",
-    "The brute-force method would be to try all possible [permutations](https://en.wikipedia.org/wiki/Permutation) of the city ordering. Suppose we had 3 cities, the following possibilities exist:\n",
+    "The brute-force method would be to try all possible [permutations](https://en.wikipedia.org/wiki/Permutation) of the city ordering. with three cities, the following possibilities exist:\n",
     "- City 1, City 2, City 3\n",
     "- City 1, City 3, City 2\n",
     "- City 2, City 1, City 3\n",
@@ -302,7 +301,7 @@
     "- City 3, City 1, City 2\n",
     "- City 3, City 2, City 1\n",
     "\n",
-    "How long would it take to exhaustively search all of the possibilities to find the optimal answer?\n",
+    "How long would it take to exhaustively search all the possibilities to find the optimal answer?\n",
     "\n",
     "$n!$ possible permutations exist.\n",
     "\n",
@@ -327,11 +326,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "16c923ab",
    "metadata": {},
    "source": [
-    "Try running the above code block for different values for the number of cities.  As you can see if you use a small value, you'll end up with zero as the code uses integral division `//`.  For small values, take out `// num_sec_in_day` to just see the number of seconds or alter the assumption of 1 billion tries per second. How could you convert the result to the number of years?  Try making these code changes in the above cell and re-running the cell. Part of being a computer scientist is to explore different possibilities.\n",
+    "Try running the above code block for different values for the number of cities. If you use a small value, the program prints zero as the code uses integral division `//` which discards the remainder.  For small values, take out `// num_sec_in_day` to just see the number of seconds or alter the assumption of 1 billion tries per second. How could you convert the result to the number of years?  Try making these code changes in the above cell and re-running the cell. Part of being a computer scientist is to explore different possibilities.\n",
     "\n",
     "The traveling salesperson problem has direct applicability to real-life:\n",
     "- Creating routes on maps\n",
@@ -343,10 +343,11 @@
    "id": "86a1bf48",
    "metadata": {},
    "source": [
-    "## Abstraction\n",
-    "One of the keys to successful programming is to use abstraction - to focus on the outside view of an object or function - not necessarily the exact details and steps to perform a specific task. For example, to query the Wayback Machine, a number of details where abstracted away by the `urllib` module. We did not have to concern ourselves with opening a network connection, following the HTTP protocol, and parsing the results.  The `urllib` module took care of those tasks for us with an abstracted (simplified) view to open a URL and read the response. \n",
+    "## Abstraction and Encapsulation\n",
     "\n",
-    "We take advantage of abstraction when we use existing classes, modules, and functions. Through abstraction, programmers hide the underlying complexity of how something works.  We can solve real-life problems without having to understand the precise implementation details.  We will also apply abstraction to model real-life systems, problems, and tasks."
+    "One of the keys to successful programming is to apply fundamental programming principles.  In this notebook, we have relied heavily upon two, abstraction and encapsulation, that frequently appear together. Abstraction seeks to distill a concept to its most fundamental parts while encapsulation hides the necessary and sometimes complex details of how those parts are implemented. With abstraction, we focus on the outside view of an object or function while encapsulation hides the exact details and steps to perform a specific task. For example, to query the Wayback Machine, a number of details were encapsulated by the `urllib` module. We did not have to concern ourselves with opening a network connection, following the HTTP protocol, and parsing the results. The `urllib` module handled those tasks with an abstracted (simplified) view to open a URL and read the response - the fundamental operations.\n",
+    "\n",
+    "We take advantage of abstraction, encapsulation, and other programming principles when we use existing classes, modules, and functions. We can solve real-life problems by focusing on the essential parts without having to understand the precise implementation details. Throughout these notebooks, we will apply programming principles to model real-life systems, problems, and tasks."
    ]
   },
   {
