--- a/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
+++ b/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
@@ -1,23 +1,23 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c1836d3b",
    "metadata": {},
    "source": [
     "<div class=\"pagebreak\"></div>\n",
     "\n",
-    "# Problem Solving by Progamming\n",
+    "# Problem Solving by Programming\n",
     "*aka Performing Tasks with Computers*\n",
     "\n",
     "One of the great satisfactions with computer programming is the ability to solve real-world tasks - especially when others can use our creations.\n",
     "\n",
-    "One approach to creating programs is to apply procedural programming.  In this paradigm, programmers create a list of instructions that computers must perform in order to solve a particular problem or perform a specific task.  For right now, we just consider small programs - as the course progresses, our programs will become larger and we will adopt more techniques to approach these problems.\n",
+    "One approach to creating programs is to apply procedural programming.  In this paradigm, programmers create a list of instructions that computers must perform in order to solve a particular problem or perform a specific task.  For right now, we just consider small programs. As the course progresses and our programs become larger, we will adopt more techniques to approach those problems.\n",
     "\n",
-    "In the [Introductory Notebook](01-Introduction.ipynb), the first task was to open a web page from the Wayback Machine.  Suppose instead that you were asked to find the homepage from [The News&Observer](https://www.newsobserver.com/) from November 11th, 2018.  One way to begin to a create an algorithm for this process is to utilize \"The Seven Steps\" [1] (The following description is inspired by \"All of Programming\" by Drew Hilton and Anne Bracy.)\n",
+    "In the [Introductory Notebook](01-Introduction.ipynb), the first task was to open a web page from the Wayback Machine.  Suppose instead that you were asked to find the homepage from [The News & Observer](https://www.newsobserver.com/) from November 11th, 2018.  One way to begin to a create an algorithm for this process is to utilize \"The Seven Steps\" [1] (The following description is inspired by \"All of Programming\" by Drew Hilton and Anne Bracy.)\n",
     "\n",
-    "![](images/sevensteps.png)\n",
-    "\n"
+    "![](images/sevensteps.png)"
    ]
   },
   {
@@ -29,7 +29,7 @@
     "\n",
     "One way, we could work the instance ourselves is to visit https://archive.org/.  Once there, we could enter https://www.newsobserver.com/ as the URL to search in the Wayback Machine. This produces a timeline and calendar from which we can select a particular page.  So we click on 2018.  Then we click on November 11th in the calendar and select one of the dates.  Success!  The page refreshes with this URL: https://web.archive.org/web/20181111065826/https://www.newsobserver.com/\n",
     "\n",
-    "Step Two is to write these steps down.  For this step and Step Three, write the steps in \"pseudocode\".  This is an informal, natural language (i.e., English, Chinese, etc.) description of how the program will work.  Don't worry if you're not sure how this really works yet, the course has plenty of examples.  \n",
+    "Step Two is to write these steps down.  For this step and Step Three, write the steps in \"pseudocode\".  This is an informal, natural language (i.e., English, Chinese, etc.) description of how the program will work. Do not worry if you are unsure how this really works yet - the course has plenty of examples.\n",
     "\n",
     "<pre>\n",
     "1. Visit https://archive.org/\n",
@@ -39,11 +39,11 @@
     "5. Wait for the browser to respond with the archived page\n",
     "</pre>\n",
     "\n",
-    "As you write these steps down, make sure you explicitly state everything.  Are there implicit steps/instructions missing? A computer can not infer steps that our mind implicitly places into steps.  For example, in the above steps, how do I visit that particular website (open up a browser window and enter the url into the address/search bar). Many computer programming books like to use the examples of recipes or knitting patterns to demonstrate the sequences of steps to be followed.\n",
+    "As you write these steps down, make sure you explicitly state everything.  Are there implicit steps/instructions missing? A computer cannot infer steps that our mind implicitly places into steps.  For example, in the above steps, how do I visit that website (open up a browser window and enter the url into the address/search bar). Many computer programming books like to use the examples of recipes or knitting patterns to demonstrate the sequences of steps to be followed.\n",
     "\n",
-    "Step Three involves generalizing our steps.  Our initial solution works for a specific site and date, but also requires manual intervention.  We need to search for ways to programmatically access the data. Often, sites provide an [application programming interface (API)](https://en.wikipedia.org/wiki/API#Web_APIs) as way to access data. Performing a web search on \"wayback machine api\" leads to this page: https://archive.org/help/wayback_api.php. In reading this page, we see that the Wayback Machine has an API endpoint with URLs that follows this example: https://archive.org/wayback/available?url=example.com&timestamp=20060101\n",
+    "Step Three involves generalizing our steps.  Our initial solution works for a specific site and date, but also requires manual intervention.  We need to search for ways to programmatically access the data. Often, sites provide an [application programming interface (API)](https://en.wikipedia.org/wiki/API#Web_APIs) as way to access data. Performing a web search on \"Wayback machine api\" leads to this page: https://archive.org/help/wayback_api.php. In reading this page, we see that the Wayback Machine has an API endpoint with URLs that follows this example: https://archive.org/wayback/available?url=example.com&timestamp=20060101\n",
     "\n",
-    "In other situations, you will need to research the problem domain to gain a deeper understand of what's occurring and how you can automate something."
+    "In other situations, you will need to research the problem domain to gain a deeper understanding of how something functions and then how can you automate that process."
    ]
   },
   {
@@ -55,7 +55,7 @@
     "\n",
     "To generalize this solution, we need to pass the url and date as inputs into the process.  For right now, we can just have the user enter these two values.  \n",
     "\n",
-    "So let's look at the generalized set of steps:\n",
+    "The generalized set of steps:\n",
     "<pre>\n",
     "1. Have the user enter a website URL (website_url)\n",
     "2. Have the user enter a date in the format of YYYYMMDD (search_date)\n",
@@ -74,11 +74,11 @@
    "source": [
     "In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm. We also need to test these steps by varying the inputs to see how our algorithms reacts.  This example is relatively straightforward, but in more complex situations we will want to have at least some assurance here that our approach is sound. Still, what happens if we enter an empty URL or date?  What if the URL does not exist in the Wayback Machine?  What happens if the date is in the wrong format? How does the program behave if our network connection is down?\n",
     "\n",
-    "For all but the simplest situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they can not prove that defects exists.  Such proof requires formal verification using models and logic that can be reasoned upon.  Hardware manufacturers are probably the leading use of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we will look at different ways to quantify the appropriate amount of testing required. \n",
+    "For all but the simplest situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they cannot prove that no defects exist.  Such proof requires formal verification using models and logic that can be reasoned upon.  Hardware manufacturers are probably the leading use of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we will look at different ways to quantify the appropriate amount of testing required. \n",
     "\n",
-    "Side Note: One of the fundamental questions within Computer Science has been whether or not it can be proved that for an arbitrary program will it halt for a given input.  Known as the [Halting Problem](https://en.wikipedia.org/wiki/Halting_problem), this problem has been used as the basis to show other problems are equivalent to it, and hence unsolvable.  Proving the absence of all defects is one such problem.\n",
+    "Side Note: One of the fundamental questions within Computer Science has been whether it can be proved that an arbitrary program will it halt for a given input.  Known as the [Halting Problem](https://en.wikipedia.org/wiki/Halting_problem), this problem has been used as the basis to show other problems are equivalent to it, and hence unsolvable.  Proving the absence of all defects is one such problem.\n",
     "\n",
-    "The goal of these first four steps is to have performed sufficient planning to minimize and eliminate issues as we convert our steps into computer code and test that code.  Often, you will here this referred to as \"design\".  Our \"requirement\" was to develop a routine to search the Wayback Machine for a particular URL and date, and then to open a web browser with the closest URL available in the archive.  \n",
+    "The goal of these first four steps is to have performed sufficient planning to minimize and eliminate issues before we convert our steps into computer code and test that code.  This is referred to as \"design\".  Our \"requirement\" was to develop a routine to search the Wayback Machine for a particular URL and date, and then to open a web browser with the closest URL available in the archive.  \n",
     "\n",
     "From a documentation perspective, the expected outcome should contain:\n",
     "* Inputs to the routine\n",
@@ -101,9 +101,9 @@
    "source": [
     "In Step 5, we convert the pseudocode into the code of our target language. \n",
     "\n",
-    "In Step 6, we then run and test the program to see if it works.  If all of our tests pass, we are complete.  If we find issues, then we need to debug our program (Step 7) to find and correct those issues, which we'll fix be going back to Step 5.\n",
+    "In Step 6, we then run and test the program to see if it works.  If all of our tests pass, we are complete.  If we find issues, then we need to debug our program (Step 7) to find those issues, which we will correct by circling back to Step 5.\n",
     "\n",
-    "As you increase your coding skills, much of this process will become second nature and you can minimize/combine steps. However you should always spend an appropriate amount of time planning out your solution.  For easier problems, this can just be a few scribbles or notes.  For more complex problems and large systems, you will spend a substantial amount of time researching the best approach and then documenting that approach."
+    "As you increase your coding skills, much of this process will become second nature and you can minimize/combine steps. However, you should always spend an appropriate amount of time planning out your solution.  For easier problems, this can just be a few scribbles or notes.  For more complex problems and large systems, you will spend a substantial amount of time researching the best approach and then documenting that approach."
    ]
   },
   {
@@ -140,14 +140,6 @@
     "\n",
     "[3] Steve McConnell. 2004. _Code Complete_, Second Edition. Microsoft Press, USA."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85fcadb5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
