--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -7,18 +7,18 @@
    "source": [
     "<div class=\"pagebreak\"></div>\n",
     "\n",
-    "# Data:Types, Values, Variables, and Names\n",
+    "# Data: Types, Values, Variables, and Names\n",
     "\n",
-    "A computer program is a series of instructions that operate on data. To build effective programs, you will need to understand\n",
-    "a number of building blocks and then how to combine and manipulate those blocks.\n",
+    "A computer program is a series of instructions that operate on data. To build effective programs, you will\n",
+    "need to understand several basic building blocks and then how to combine and manipulate those blocks.\n",
     "\n",
     "Another way to look at programming is to consider Lego bricks.  \n",
     "![Legos](images/lego_bricks.jpg)\n",
     "<br><sub><sup>Source: https://commons.wikimedia.org/wiki/File:Lego_bricks.jpg</sup></sub>\n",
     "\n",
-    "These bricks come in a large number of shapes, sizes, and colors.  Anyone can quickly start combining them together and novices can produce complex models while following instructions.  However, Lego master builders can produce truly novel models. They accomplish these builds through a deep understanding of how all of the different pieces can work together. They also spend a significant amount of time planning out their builds - just as we do when we document the algorithmic approach in the first four steps of the \"Seven Steps\".\n",
+    "These bricks come in numerous shapes, sizes, and colors.  Anyone can quickly start combining them together and novices can produce complex models while following instructions.  However, Lego master builders can produce truly novel models. They accomplish these builds through a deep understanding of how the different pieces work together. They also spend a significant amount of time planning out their builds - just as we do when we document the algorithmic approach in the first four steps of the \"Seven Steps\".\n",
     "\n",
-    "Similarly, to become a proficient programmer, you will need to learn a core set of concepts (building blocks). These concepts are largely universal to many different progamming languages, they just vary with slight differences in syntax.  (Syntax are the rules defining the structure of a computer language.)\n",
+    "Similarly, to become a proficient programmer, you will need to learn a core set of concepts (building blocks). These concepts are largely universal to many different programming languages, they just vary with slight differences in syntax.  (Syntax are the rules defining the structure of a computer language.)\n",
     "\n",
     "We will start our journey of learning these rules with looking at different ways of representing data.  \n",
     "\n",
@@ -43,7 +43,7 @@
     "\n",
     "Many other programming languages have the concept of a primitive type, which simply contains a particular value.\n",
     "\n",
-    "Every object has a particular type that it is associated with.  That type determines what state (information) an object can know as well as what methods can be be called on that object.\n",
+    "Every object has a particular type that it is associated with.  That type determines what state (information) an object can know as well as what methods can be called on that object.\n",
     "\n",
     "Practically, objects help us represent something. Initially, we will just use numbers and text. Objects can also be more complicated data collections - such as a list of items. In later notebooks, we learn how to build our own object types (classes) to provide abstractions (models) of the world we are trying to represent in our programs."
    ]
@@ -55,7 +55,7 @@
    "source": [
     "## Types\n",
     "\n",
-    "The table below shows Python's built-in types.  While this list may seem overwhelming as a new programmer, we will use most of these  regularly (complex, bytes, and bytearray will not be used frequently int this material).  For right now, just look at the different types of numbers (int and float) and the string type. The next notebook will cover these types more in-depth.  Ints, floats, and strings should feel very familiar to you as you interact with these values regularly - it's money, tips, messages, etc.\n",
+    "The table below shows Python's built-in types.  While this list may seem overwhelming as a new programmer, we will use most of these  regularly (complex, bytes, and bytearray will not be used frequently int this material).  For right now, just look at the different types of numbers (int and float) and the string type. The next notebook will cover these types more in-depth.  Ints, floats, and strings should feel very familiar to you as you interact with these values regularly - these types represent counts, money, tips, messages, etc.\n",
     "\n",
     "| **Name**       | **Type**  | **Mutable?** | **Examples**                                                                                               |\n",
     "|:---------------|:----------|:-------------|:-----------------------------------------------------------------------------------------------------------|\n",
@@ -78,11 +78,11 @@
    "id": "fbdb349c-d88d-4cb4-807f-2f3ddad91fb2",
    "metadata": {},
    "source": [
-    "*Mutable* indicates whether or not an object of that type can be changed once that object has been created.  \n",
+    "*Mutable* indicates if an object of that type can be changed once that object has been created.  \n",
     "\n",
-    "So, once we create a string or an integer, we can no longer change it's value.  Any updates to the value result in a new object being created.\n",
+    "So, once we create a string or an integer, we can no longer change its value.  Any updates to the value result in a new object being created.\n",
     "\n",
-    "As an analogy, consider a clear, sealed box.  You can peak at the contents, but there's no way to change what's in that box."
+    "As an analogy, consider a clear, sealed box.  You can peak at the contents, but you can touch or manipulate the contents of that box."
    ]
   },
   {
@@ -122,12 +122,12 @@
    "id": "2b7d0e1b-e06a-4597-a6fa-5156b59a9eee",
    "metadata": {},
    "source": [
-    "`x` holds an integer value, `pi` holds a holds a floating point value, and `message` holds a text string.  The equals sign(`=`) specifies an _assignment statement_. Programmers read these statements as\n",
+    "`x` holds an integer value, `pi` holds a floating point value, and `message` holds a text string.  The equals sign (`=`) specifies an _assignment statement_. Programmers read these statements as\n",
     "- set `x` to the integer 6\n",
     "- set `p` to the float 3.14159\n",
     "- set `message` to the string \"Hello World!\"\n",
     "\n",
-    "Those above statements created three variables - `x`, `pi`, and `message` - and assigned to them the value on the right side of the statement. These values on the right hand side are objects of their respective types (int, float, and string)\n",
+    "Those above statements created three variables - `x`, `pi`, and `message` - and assigned to them the value on the right side of the statement. These values on the right-hand side are objects of their respective types (int, float, and string)\n",
     "\n",
     "Unlike equations in algebra or other advanced mathematics, programming languages typically do not have the capability to solve the equation even though it may appear capable.  Instead, the right side of the equals sign is evaluated and then the result is assigned to a variable on the left side of the equation.\n",
     "\n",
@@ -150,7 +150,7 @@
    "id": "4edba795",
    "metadata": {},
    "source": [
-    "As an excercise, re-run the proceeding code block, but see what the other types are for ```x``` and ```message``` by replacing ```pi``` with those variable names.\n",
+    "As an exercise, re-run the proceeding code block, but see what the other types are for ```x``` and ```message``` by replacing ```pi``` with those variable names.\n",
     "\n",
     "Try defining variables of the other types from the above table.  Use these following cells to experiment:"
    ]
@@ -231,7 +231,7 @@
    "source": [
     "You should have received a \"NameError\" specifying that variable named \"msg\" was not defined.  One of the key challenges while programming is to find and correct mistakes such as this.  \n",
     "\n",
-    "Before we use a variable on the right hand side of an assignment or in other statements, we must first define that variable by assigning a value to it."
+    "Before we use a variable on the right-hand side of an assignment or in other statements, we must first define that variable by assigning a value to it."
    ]
   },
   {
@@ -242,8 +242,8 @@
     "### Variable Naming Rules\n",
     "As you name a variable, you should create names that represent the purpose of that variable. The variable name must also follow these rules:\n",
     "- can only contain lowercase letters (a-z), uppercase letters (A-Z), digits (0-9), and an underscore(_)\n",
-    "- can not begin with a digit\n",
-    "- can not be one of Python's reserved keywords.\n",
+    "- cannot begin with a digit\n",
+    "- cannot be one of Python's reserved keywords.\n",
     "\n",
     "Variable names are case sensitive.\n",
     "\n",
@@ -295,7 +295,7 @@
    "id": "28053138-3670-4741-949f-c2a01c10e80f",
    "metadata": {},
    "source": [
-    "Don't worry if the output (the list of keywords) does not yet make sense, we will cover most of these keywords in this class.\n",
+    "This output (the list of keywords) may not yet make sense, but by the end of the course, we will cover most of these keywords.\n",
     "\n",
     "To see more information about a particular keyword, type help(\"_keywordName_\").  Try looking a couple of different keywords.  "
    ]
@@ -352,7 +352,7 @@
    "source": [
     "When you see a pattern such as <code><i>object_name.method</i>()</code> (e.g., `x.bit_length()`) that's using behavior associated with that object.  Programmers will read this as calling _method_name_ for _object_name_. Methods are pretty much the same thing as functions, except that they belong to a particular object.\n",
     "\n",
-    "As with functions, we will use a number of predefined object types (classes) as well as writing our own.\n",
+    "As with functions, we use predefined object types (classes) as well as writing our own.\n",
     "\n",
     "To see the available methods on an object, we use the built-in ```dir()``` function.  This can be called with a literal value, a type name, or a variable.  For example,\n",
     "```\n",
@@ -378,25 +378,17 @@
    "id": "44ce419f",
    "metadata": {},
    "source": [
-    "As you examine the output for ```dir(int)```, you'll notice a number of methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve as special functions within Python (initialize an object ```__init__```, produce a string representation of an object ```__str__```,...) or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.) Normally, we do not directly call these methods, but rather implicitly invoked them through other operations.\n",
+    "As you examine the output for ```dir(int)```, notice many methods begin and end with double underscores.  Referred to as \"dunder\" methods, these methods serve as special functions within Python: initialize an object ```__init__```, produce a string representation of an object ```__str__```, or override built-in functions and operators (abs() ```__abs__```, = ```__eq__```, etc.) Normally, we do not directly call these methods, but rather implicitly invoked them through other operations.\n",
     "\n",
     "For example, the following code uses `__abs__()` from the `int` class to get the absolute value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "da377bc4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = -50\n",
     "a = abs(a)\n",
@@ -461,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4eef853c",
    "metadata": {},
    "outputs": [],
@@ -474,12 +466,12 @@
    "id": "eccae246",
    "metadata": {},
    "source": [
-    "You can also see the relevant source code of the object by typing `??`.  If the source code does not appear that means the function or object is not directly implemented in Python, but rather in C or C++."
+    "You can also see the relevant source code of the object by typing `??` after an item.  If the source code does not appear that means the function or object is not directly implemented in Python, but rather in C or C++."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "32ff91ba",
    "metadata": {},
    "outputs": [],
@@ -516,21 +508,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "75079198",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
@@ -545,18 +526,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e1b4c4d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(a)"
    ]
@@ -566,14 +539,14 @@
    "id": "5cb20dd4",
    "metadata": {},
    "source": [
-    "While in these two examples, the output has been the same, that's not universally true.\n",
+    "While in these two examples the output has been the same, that does not always occur.\n",
     "\n",
     "If we just have a value by itself on a line and then another statement, Jupyter will not display the value.  The next code block does not display any value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4b0fca39",
    "metadata": {},
    "outputs": [],
