--- a/IntroductionToPython/04-BasicInputAndOutput.ipynb
+++ b/IntroductionToPython/04-BasicInputAndOutput.ipynb
@@ -399,13 +399,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3706d61",
+   "metadata": {},
+   "source": [
+    "_Runtime errors_ occur when the Python interpreter executes legally syntactic code, but there is some issue with the code and the interpreter cannot continue normal execution. Examples of runtime errors include not defining variable before use and division by zero.  These errors are indicated by the presence of a \"Traceback\" - the sequences of statements and function calls they led to the error. These errors may or may not be easy to fix.  Sometimes the variable not being defined is just a typo.  Other times, we need to look to see how the particular condition arose that led to that error.\n",
+    "\n",
+    "_Semantic errors_ (_logic errors_) occur when the program executes without issues, but produces the wrong result.  These issues usually arise due to a logic mistake.  Completely understanding all of the different possible inputs a program may process and how our code reacts to those inputs can be challenging.  Our minds are limited with the number of possibilities we can track simultaneously.  Other times we may be using code or services that others developed; that code may react in unexpected ways."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ec563f6",
    "metadata": {},
    "source": [
-    "_Runtime errors_ occur when the Python interpreter executes legally syntactic code, but there is some issue with the code. Examples of runtime errors include not defining variable before use and division by zero.  These errors are indicated by the presence of a \"Traceback\" - the sequences of statements and function calls they led to the error. These errors may or may not be easy to fix.  Sometimes the variable not being defined is just a typo.  Other times, we need to look to see how the particular condition arose that led to that error.\n",
-    "\n",
-    "_Semantic errors_ occur when the program executes without issues, but produces the wrong result.  These issues usually arise due to a logic mistake.  Completely understanding all of the different possible inputs a program may process and how our code reacts to those inputs can be challenging.  Our minds are limited with the number of possibilities we can track simultaneously.  Other times we may be using code or services that others developed; that code may react in unexpected ways.\n",
-    "\n",
     "As you find and fix issues, several strategies exist:\n",
     "\n",
     "**Read:** Read your source code. Walk through it mentally.  Does the code execute the way you intended? \n",
