--- a/IntroductionToPython/34-DateTime.ipynb
+++ b/IntroductionToPython/34-DateTime.ipynb
@@ -52,22 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "5c6ae3ad",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'timezone'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [122]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdt\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtimezone\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'timezone'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime as dt"
    ]
@@ -223,27 +211,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "b66b0f4e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "year = 2014\n",
-      "month = 11\n",
-      "hour = 17\n",
-      "minute = 10\n",
-      "timestamp = 1417212630.34238\n",
-      "\n",
-      "2022-06-30T21:17:46.274494\n",
-      "2022-07-01T01:17:46.274519\n",
-      "\n",
-      "2022-06-30T20:19:56+05:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# main constructor from\n",
     "a = dt.datetime(2014, 11, 28, 17, 10, 30, 342380)\n",
@@ -277,9 +248,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6ce9c33b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73b51c8",
    "metadata": {},
+   "outputs": [],
    "source": [
     "LOCAL_TIMEZONE = dt.datetime.now().astimezone().tzinfo\n",
     "print(\"Time Zone:\",LOCAL_TIMEZONE)\n",
@@ -296,18 +269,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "1a4d006b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-01 12:37:11.267659+00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "utc = dt.datetime.now(dt.timezone.utc)\n",
     "print(utc)"
@@ -323,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "78a5a601",
    "metadata": {},
    "outputs": [],
@@ -336,18 +301,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "37db34df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-06-30 21:36:17.475493-04:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get the current time and convert to the local timezone.\n",
     "print(utc_to_timezone(dt.datetime.utcnow()))"
@@ -365,18 +322,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "da4d564e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-01 09:49:23.031221+08:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import zoneinfo\n",
     "\n",
@@ -384,7 +333,7 @@
     "zones = zoneinfo.available_timezones()\n",
     "\n",
     "# convert the curent datetime to Hong Kong's timezone\n",
-    "hk_tz = zi.ZoneInfo('HongKong')\n",
+    "hk_tz = zoneinfo.ZoneInfo('HongKong')\n",
     "print(utc_to_timezone(dt.datetime.utcnow(),hk_tz))"
    ]
   },
@@ -428,18 +377,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "ec0f4a6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "07/01/2022, 12:20:04 UTC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "utcnow = dt.datetime.utcnow().replace(tzinfo=dt.timezone.utc)\n",
     "print(utcnow.strftime(\"%m/%d/%Y, %H:%M:%S %Z\"))"
@@ -588,18 +529,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "94c60a8f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-01 12:20:04 None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "str = '07/01/2022, 12:20:04 UTC'\n",
     "mydate = dt.datetime.strptime(str,\"%m/%d/%Y, %H:%M:%S %Z\")\n",
@@ -619,20 +552,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "d0b38e58",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-06-30T22:31:10.583450-04:00\n",
-      "Timezone('America/New_York')\n",
-      "2022-07-01T02:31:10.583589+00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pendulum\n",
     "now = pendulum.now()\n",
@@ -651,20 +574,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "1943fe34",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<class 'pendulum.datetime.DateTime'>, <class 'datetime.datetime'>, <class 'pendulum.date.Date'>, <class 'pendulum.mixins.default.FormattableMixin'>, <class 'datetime.date'>, <class 'object'>]\n",
-      "\n",
-      "[<class 'pendulum.tz.timezone.Timezone'>, <class 'datetime.tzinfo'>, <class 'object'>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(now.__class__.mro())\n",
     "print()\n",
@@ -673,30 +586,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "c7726956",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-06-30T22:31:10.583450-04:00\n",
-      "2022-07-02T22:31:10.583450-04:00\n",
-      "1 week 3 days 5 hours\n",
-      "dur.weeks: 1\n",
-      "dur.days: 10\n",
-      "dur.hours: 5\n",
-      "245\n",
-      "1周 3天 5小时\n",
-      "2022-06-20T17:31:10.583450-04:00\n",
-      "<Period [2022-06-27T22:31:10.583450-04:00 -> 2022-06-30T22:31:10.583450-04:00]>\n",
-      "259200\n",
-      "3\n",
-      "2022-06-24T22:31:10.583450-04:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Converting to iso8601 format\n",
     "print(now.to_iso8601_string())\n",
@@ -737,28 +630,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "id": "672e2259",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-01T08:57:53.500678-04:00\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'2022-07-01 08:57:53-04:00'"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "now = pendulum.now()\n",
     "print(now)\n",
@@ -767,18 +642,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "0b394d8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-01T08:44:39-04:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "parsed = pendulum.from_format('2022-07-01 08:44:39-04:00','YYYY-MM-DD HH:mm:ssZ')\n",
     "print(parsed)"
@@ -836,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "ad74df12",
    "metadata": {},
    "outputs": [],
